--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
       "require": "./dist/index.cjs"
     }
   },
-  "bin": {
-    "mostage": "./dist/cli.js"
-  },
   "files": [
     "dist"
   ],
@@ -49,6 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/prismjs": "^1.26.5",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
@@ -59,6 +57,6 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "commander": "^14.0.0"
+    "prismjs": "^1.30.0"
   }
 }
