--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mostage",
   "version": "1.0.0",
-  "description": "A modern, plugin-based, themeable slide presentation framework",
+  "description": "A modern, plugin-based, themeable markdown slide presentation framework",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -28,9 +28,7 @@
     "slides",
     "presentation",
     "markdown",
-    "html",
     "web-based",
-    "text-based",
     "typescript",
     "reveal",
     "framework"
@@ -58,6 +56,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "marked": "^16.3.0",
     "prismjs": "^1.30.0"
   }
 }
