--- a/docs/config-complete.json
+++ b/docs/config-complete.json
@@ -66,7 +66,7 @@
       "enabled": true,
       "position": "top",
       "color": "#007acc",
-      "height": "12px
+      "height": "12px"
     },
     "SlideNumber": {
       "enabled": true,
