--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.9",
     "@types/node": "^24.3.0",
     "@types/prismjs": "^1.26.5",
-    "@types/fs-extra": "^11.0.4",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
@@ -59,11 +60,11 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "marked": "^16.3.0",
-    "prismjs": "^1.30.0",
-    "commander": "^12.0.0",
     "chalk": "^5.3.0",
+    "commander": "^12.0.0",
+    "fs-extra": "^11.2.0",
     "inquirer": "^9.2.12",
-    "fs-extra": "^11.2.0"
+    "marked": "^16.3.0",
+    "prismjs": "^1.30.0"
   }
 }
