--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
   ],
   "scripts": {
     "dev": "vite --config vite.dev.config.ts",
-    "build": "npm run build:lib && npm run build:cli && npm run build:example",
-    "build:lib": "vite build --config vite.build.lib.config.ts",
+    "build": "npm run build:core && npm run build:cli",
+    "build:core": "vite build --config vite.build.core.config.ts",
     "build:cli": "vite build --config vite.build.cli.config.ts",
-    "build:example": "vite build --config vite.build.example.config.ts",
-    "preview": "vite preview --config vite.build.example.config.ts",
+    "build:demo": "node dist/cli/index.js build --template demo --output dist/demo",
     "test": "vitest",
     "lint": "eslint src --ext ts,tsx",
     "format": "prettier --write src/**/*.{ts,tsx,css}",
@@ -57,6 +56,7 @@
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
     "prettier": "^3.0.0",
+    "terser": "^5.44.0",
     "typescript": "^5.0.0",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4",
