--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install
 
       - name: Build demo for GitHub Pages
-        run: npm run build:demo
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
