--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   "bugs": {
     "url": "https://github.com/mirmousaviii/mostage/issues"
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "main": "dist/core/index.cjs",
+  "module": "dist/core/index.js",
+  "types": "dist/core/types/index.d.ts",
   "bin": {
     "mostage": "./dist/cli/index.js"
   },
   "exports": {
     ".": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./dist/core/types/index.d.ts",
+      "import": "./dist/core/index.js",
+      "require": "./dist/core/index.cjs"
     }
   },
   "files": [
@@ -39,9 +39,10 @@
   "scripts": {
     "dev": "vite --config vite.dev.config.ts",
     "build": "npm run clean && npm run build:core && npm run build:cli && npm run build:demo",
-    "build:core": "vite build --config vite.build.core.config.ts",
+    "build:core": "vite build --config vite.build.core.config.ts && npm run copy:templates",
     "build:cli": "vite build --config vite.build.cli.config.ts",
     "build:demo": "node dist/cli/index.js example --template demo --output dist/demo",
+    "copy:templates": "cp -r src/core/templates dist/core",
     "test": "vitest",
     "lint": "eslint src --ext ts,tsx",
     "format": "prettier --write src/**/*.{ts,tsx,css}",
