--- a/src/core/templates/demo/config.json
+++ b/src/core/templates/demo/config.json
@@ -4,7 +4,7 @@
   "contentPath": "./content.md",
   "urlHash": true,
   "transition": {
-    "type": "horizontal",
+    "type": "vertical",
     "duration": 600,
     "easing": "ease-in-out"
   },
@@ -13,34 +13,34 @@
     "horizontal": true
   },
   "header": {
-    "content": "# Mostage",
+    "contentPath": "./header.html",
     "position": "top-left"
   },
   "footer": {
-    "content": "#### Presentation Framework",
+    "content": "### Presentation Framework",
     "position": "bottom-left"
   },
   "background": [
     {
-      "imagePath": "./background/background-left.jpg",
-      "size": "cover",
-      "position": "left",
+      "imagePath": "./images/background-first.svg",
+      "size": "contain",
+      "position": "top-left",
       "repeat": "no-repeat",
       "bgColor": "#000000",
       "allSlides": [1]
     },
     {
-      "imagePath": "./background/background-line.svg",
-      "size": "contain",
-      "position": "bottom",
+      "imagePath": "./images/background.svg",
+      "size": "cover",
+      "position": "center",
       "repeat": "no-repeat",
       "bgColor": "#000000",
       "allSlidesExcept": [1, 24]
     },
     {
-      "imagePath": "./background/background-animation.svg",
+      "imagePath": "./images/background-end.svg",
       "size": "cover",
-      "position": "center",
+      "position": "bottom-right",
       "repeat": "no-repeat",
       "bgColor": "#000000",
       "allSlides": [24]
