test: add unit tests

--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "build:demo": "node dist/cli/index.js example --template demo --output dist/demo && cd dist/demo && node ../../dist/cli/index.js export --format html --output .",
     "copy:templates": "cp -r src/core/templates dist/core",
     "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
     "lint": "eslint src --ext ts,tsx",
     "format": "prettier --write src/**/*.{ts,tsx,css}",
     "clean": "rm -rf dist"
@@ -66,7 +70,9 @@
     "@types/prismjs": "^1.26.5",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.34.0",
+    "jsdom": "^25.0.1",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0",
     "vite": "^7.1.3",
