feat: add build:basic script and update dev to run both templates

--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite --config vite.dev.config.ts",
+    "dev": "npm run dev:demo & npm run dev:basic",
+    "dev:demo": "cd src/core/templates/demo && vite --config ../../../../vite.dev.config.ts --port 3000",
+    "dev:basic": "cd src/core/templates/basic && vite --config ../../../../vite.dev.config.ts --port 3001",
     "build": "npm run clean && npm run build:core && npm run build:cli && npm run build:demo",
     "build:core": "vite build --config vite.build.core.config.ts && npm run copy:templates",
     "build:cli": "vite build --config vite.build.cli.config.ts",
     "build:demo": "node dist/cli/index.js example --template demo --output dist/demo && cd dist/demo && node ../../dist/cli/index.js export --format html --output .",
+    "build:basic": "node dist/cli/index.js example --template basic --output dist/basic && cd dist/basic && node ../../dist/cli/index.js export --format html --output .",
     "copy:templates": "cp -r src/core/templates dist/core",
     "test": "vitest",
     "test:run": "vitest run",
