chor: update basic template

--- a/src/core/templates/basic/config.json
+++ b/src/core/templates/basic/config.json
@@ -1,6 +1,6 @@
 {
   "element": "#app",
-  "theme": "dark",
+  "theme": "dracula",
   "contentPath": "./content.md",
   "urlHash": true,
   "transition": {
