chor: clear style of header

--- a/src/core/templates/demo/config.json
+++ b/src/core/templates/demo/config.json
@@ -49,7 +49,7 @@
   "plugins": {
     "ProgressBar": {
       "enabled": true,
-      "position": "top",
+      "position": "bottom",
       "height": "12px"
     },
     "SlideNumber": {
