chor: update default config for demo

--- a/src/core/templates/demo/config.json
+++ b/src/core/templates/demo/config.json
@@ -14,11 +14,13 @@
   },
   "header": {
     "contentPath": "./header.html",
-    "position": "top-left"
+    "position": "top-left",
+    "showOnFirstSlide": false
   },
   "footer": {
     "content": "### Demo",
-    "position": "bottom-left"
+    "position": "bottom-left",
+    "showOnFirstSlide": false
   },
   "background": [
     {
