docs: update license

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pptx"
   ],
   "author": "mo.js.org",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "type": "module",
   "homepage": "https://mo.js.org",
   "repository": {
